@@ -2,11 +2,13 @@ package com.grey.cagnotte;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.boot.builder.SpringApplicationBuilder;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.boot.web.servlet.support.SpringBootServletInitializer;
 import org.springframework.context.annotation.Bean;
 import org.springframework.core.Ordered;
+import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -16,6 +18,8 @@ import java.util.Collections;
 import java.util.List;
 
 @SpringBootApplication
+@EntityScan(basePackages = "com.grey.cagnotte.entity")
+@EnableJpaRepositories(basePackages = "com.grey.cagnotte.repository")
 public class Cagnotte extends SpringBootServletInitializer {
     public static void main(String[] args) {
         SpringApplication.run(Cagnotte.class, args);
@@ -26,20 +30,13 @@ public class Cagnotte extends SpringBootServletInitializer {
         return application.sources(Cagnotte.class);
     }
 
-    /*@Override
-    public void run(String... args) throws Exception {
-        //SpringApplication.run(Cagnotte.class, args);
-        System.out.println("Application Started !!");
-        Thread.currentThread().join();
-    }*/
-
     @Bean
     @SuppressWarnings("unchecked")
     public FilterRegistrationBean simpleCorsFilter(){
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("http://localhost:4200"));
+        config.setAllowedOrigins(Collections.singletonList("*"));
         config.setAllowedMethods(Collections.singletonList("*"));
         config.setAllowedHeaders(Collections.singletonList("*"));
         source.registerCorsConfiguration("/**", config);
